--- a/theme/cloukit-theme.css
+++ b/theme/cloukit-theme.css
@@ -1,3 +1,8 @@
+/*!
+ * @license MIT
+ * Copyright (c) 2017 Bernhard Grünewaldt - codeclou.io
+ * https://github.com/cloukit/legal
+ */
 
 /* ======================================================== */
 /* Adapted from Laravel Theme: https://github.com/compodoc/compodoc/blob/master/src/resources/styles/laravel.css */
