--- a/theme/style.css
+++ b/theme/style.css
@@ -6,7 +6,7 @@
 
 /* Howto: https://compodoc.github.io/website/guides/tips-and-tricks.html */
 @import "https://cloukit.github.io/compodoc-theme/theme/dist/reset.css";
-@import "https://cloukit.github.io/compodoc-theme/theme/dist/bootstrap.css";
-@import "https://cloukit.github.io/compodoc-theme/theme/dist/bootstrap-cards.css";
+@import "https://cloukit.github.io/compodoc-theme/theme/dist/bootstrap.min.css";
+@import "https://cloukit.github.io/compodoc-theme/theme/dist/bootstrap-card.css";
 @import "https://cloukit.github.io/compodoc-theme/theme/dist/compodoc.css";
-@import "https://cloukit.github.io/compodoc-theme/theme/dist/cloukit-theme.css";
+@import "https://cloukit.github.io/compodoc-theme/theme/cloukit-theme.css";
