--- a/theme/cloukit-theme.css
+++ b/theme/cloukit-theme.css
@@ -77,3 +77,8 @@ pre {
     font-weight: 500;
     box-shadow: 0 1px 1px rgba(0,0,0,.125);
 }
+
+/* HIDE OVERVIEW */
+.menu > nav > ul > li:nth-child(4) {
+    display:none;   
+}
