--- a/theme/1.0.0-beta.10/cloukit-theme.css
+++ b/theme/1.0.0-beta.10/cloukit-theme.css
@@ -87,3 +87,12 @@ pre {
 #book-search-input {
     display: none;
 }
+/* FIX MENUE */
+.menu-toggler {
+    cursor: pointer;
+    padding: 0;
+    font-size: 16px;
+    position: relative;
+    right: 0;
+    top: 0;
+}
